--- a/advising/advising.html
+++ b/advising/advising.html
@@ -70,6 +70,11 @@ You needn't take my word on this, feel free to contact those who have worked wit
  <ul>
   <!------------------------------------------------------------------>
  <li>
+    <A HREF="https://jordylopez27.github.io/"></a>John Ajayi, TAMU Ph.D. Student.
+ </li>
+ <!------------------------------------------------------------------>
+  <!------------------------------------------------------------------>
+ <li>
     <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
  </li>
  <!------------------------------------------------------------------>
