--- a/advising/index.html
+++ b/advising/index.html
@@ -23,26 +23,8 @@
     Isaiah Galo,  TAMU Master's Student.
     </li>
     <!---------------------------------------------------------------------------------------------------->  
-    <li>
-       Jonah Robinson, TAMU Master's student.
-    </li>
-    <!--<br>-->
-    <!--<li>
-     Jennifer Pickrel,   Master's Student in Distance Program.
-    </li>-->
-    <li>
-     Merri Stillman, Master's Student in Distance Program.
-    </li>
     <br>
 
- <!------------------------------------------------------------------>
-    <li>
-      <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D. Student.
-    </li>
- <!------------------------------------------------------------------>
-   <li>
-    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
-   </li>
  <!------------------------------------------------------------------>
    <li>
      <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
@@ -50,6 +32,10 @@
  <!------------------------------------------------------------------>
    <li>
      <A HREF=""></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
+    </li>
+ <!------------------------------------------------------------------>
+   <li>
+     <A HREF=""></a>John Ajayi, TAMU Ph.D. Student.
     </li>
  <!------------------------------------------------------------------>
     <br>
