--- a/teaching.html
+++ b/teaching.html
@@ -195,12 +195,17 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <dd>
-    <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
+    <A HREF=""></a>John Ajayi, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <dd>
     <A HREF=""></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
+  </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <dd>
+    <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
 
