--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -88,12 +88,12 @@ Homework is on a <a href="653_HW.html">separate page</a>
    <ul>
     <li>monoids</li>
     <li>basic group theory</li>
-    <li>byclic groups</li>
+    <li>cyclic groups</li>
     <li>finitely generated abelian groups</li>
     <li>Sylow theorems</li>
     <li>categories and functors<?li>
     <li>free groups and inverse limits</li>
-    <li>basic ring teory</li>
+    <li>basic ring theory</li>
     <li>commutative rings</li>
     <li>polynomial and group rings</li>
     <li>localization</li>
@@ -157,15 +157,19 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <!-------------------------------------------------------------------------------> 
  <dd><font size=+1 color=maroon>Homework:</font>
   <dl>
-    <dd>There will be weekly written homework assignments to be handed in (on  <font color=magenta>Thursdays</font>, at the starat of class)
+    <dd>There will be weekly written homework assignments to be handed in (on  <font color=magenta>Thursdays</font>, at the start of class)
         and graded.
       Problems may  be assigned in nearly every class; a summary may be found <a href="653_HW.html"><font color=red>here</font></a>.
         These will be marked by our grader, Daniel Dale, an advanced senior graduate student, and returned on
-        <font color=magenta>Tuesdays</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
+        <font color=magenta>Tuesdays</font>.   There may be homework you are to hand into Frank.<br>
         As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the
         material, which as noted is fundamental to any educated mathematician.
     </dd>
-   
+   <dd> Note that late homework is not accepted.
+   </dd>
+   <dd> Because I understand the pressures that advanced undergraduates and graduates face, I will drop your lowest homework score.
+   </dd>
+
   </dl> 
  </dd>
  <!-------------------------------------------------------------------------------> 
@@ -181,13 +185,14 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <!--      To facilitate this development, I will assign and collect some problems
        which I will mark, using a significantly more rigourous scale than perhaps that
        employed by our grader, which will be discussed in class.       -->
-   </dd>
+    </dd>
+
   </dl>
  </dd>
  <!-------------------------------------------------------------------------------> 
  <dd><font size=+1 color=maroon>Group Work:</font>
   <dl>
-   <dd>You are encouraged to work together to find solutions to the homeworks.
+   <dd>You are encouraged to work together to find solutions to the homework.
        However, you must write up the work you turn in yourself.
        Also, you are absolutely forbidden to consult web sites or problem solution sources
        (other than the textbook and class notes).
@@ -205,7 +210,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
    <dd>
      The class will have <font color=red>three</font> exams.
      They will be evening exams during the semester, likely 3 hours each.  Sottile will provide dinner.
-     They will be during te weeks of September 24, October 29, and December 3.
+     They will be during the weeks of September 24, October 29, and December 3.
      There is no final exam for this class.
    </dd>
   </dl>
@@ -215,7 +220,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
   <dl>
    <dd>
      Your course grade will be based in equal parts on homework and the midterm exams, 
-     That is, 25% homeworks, and each exam is worth 25%.
+     That is, 25% homework, and each exam is worth 25%.
    </dd>
   </dl>
  </dd>
