revisions to course policies

--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -7,8 +7,11 @@
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </HEAD>
 <!---------------------------------------------------------------------------->
-  <H1>Math 653: Graduate Algebra &nbsp; &nbsp; &nbsp; Autumn 2025</h1> 
+  <H1>Math 653: Graduate Algebra I &nbsp; &nbsp; &nbsp; Autumn 2025</h1> 
 
+<!--  https://tamu.simplesyllabus.com/doc/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I?mode=view  -->
+<!--  https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf  -->
+  
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
@@ -63,7 +66,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
     <font color=red>Text-only with 653 in the subject line</font>.
 
    
- <dd><font size=+1 color=maroon>Book:</font> <i>Algebra</I> by Lang 
+ <dd><font size=+1 color=maroon>Book:</font> <i>Algebra</I> by Serge Lang. 
       <a href="https://link.springer.com/book/10.1007/978-1-4613-0041-0">Download</a>
       chapters or purchase inexpensive softcover from Springer.  (You need to do this on campus.)
  
@@ -165,7 +168,13 @@ Homework is on a <a href="653_HW.html">separate page</a>
         As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the
         material, which as noted is fundamental to any educated mathematician.
     </dd>
-   <dd> Note that late homework is not accepted.
+   <dd>Note that late homework is not accepted.
+   </dd>
+   <dd><font color=red><b>Zeroth homework:</b> Read this page and the course syllabus, found in Canvas, and send a note to Frank
+    (by email, 653 in the subject line) that you have read and understood the syllabus and course homepage and
+    pledge to abide by the course rules as detailed in those documents.
+    Please also include in that a brief description of who you are, your mathematical background, what you hope to get out of the course,
+    and anything else that you want me to know about you.</font>
    </dd>
    <dd> Because I understand the pressures that advanced undergraduates and graduates face, I will drop your lowest homework score.
    </dd>
@@ -196,7 +205,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
        However, you must write up the work you turn in yourself.
        Also, you are absolutely forbidden to consult web sites or problem solution sources
        (other than the textbook and class notes).
-       Violating this rule has serious consequences, both as it violates the universities
+       Violating this rule has serious consequences, both as it violates the university's
        academic integrity policy (read that in the official syllabus), 
        and because not doing your own work will likely lead to an inability to do the problems 
        on the course exams and very poor marks.
@@ -220,18 +229,36 @@ Homework is on a <a href="653_HW.html">separate page</a>
   <dl>
    <dd>
      Your course grade will be based in equal parts on homework and the midterm exams, 
-     That is, 25% homework, and each exam is worth 25%.
+     That is, 25% homework, and each exam is worth 25%.<br>
+
+     I will use the following scale for grades:<br>
+     <b>A</b>: Above 85%<br>
+     <b>B</b>: Between 65% and 85%<br>
+     <b>C</b>: Below 65%<br>
+     These may be adjusted with lower cut-offs if necessary, as I intend to assign grades that reflect the historical grade distribution.
    </dd>
   </dl>
  </dd>
  <!---------------------------------------------------------------------------------------------------->
+ <dd><font size=+1 color=maroon>Device Policy:</font> 
+  <dl>
+   <dd>
+   I have a zero-tolerance policy towards electronic devices in class.
+   In particular no phones, and no laptops.
+   The exceptions are if you have an accommodation, if we have discussed this before, or if we are using computer algebra software that day.
+   It is OK to use a tablet for notes if you write with a stylus, and pen(cil) on paper is always OK.<br>
 
+   Use  of an unauthorized device in class will result in your dismissal from class that day.
+   </dd>
+  </dl>
+ </dd>  
+ <!---------------------------------------------------------------------------------------------------> 
 </dl>
 
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-Last modified: Sat Aug 23 06:21:33 CDT 2025 by sottile
+Last modified: Sun Aug 24 13:56:23 CDT 2025 by sottile
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
