--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -1,24 +1,40 @@
 <HTML><HEAD><TITLE>Homework for Math 653</TITLE></HEAD>
 <BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
 <A NAME="top"></A>
-<H2>Autumn 2023<BR>
- Math 653: Graduate Algebra I, Autumn 2025
+<H2>Autumn 2025<BR>
+ <a href="653.html">Math 653: Graduate Algebra I</a>
 </H2>
 <h2><font color=blue>Homework Assignments</font>
 </H2>
 
 
-<!------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <hr>
-<!------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+<h3><font color="80000">The plain ASCII files provided (HW##.tex) are here for you to use as you wish.<br>
+If you do use them for your own homework, please edit the header and put in your own information.</font></h3>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <dl>
-  <!-- <dd>  Assignment 1: <a href="653_HW/HW01.pdf">pdf</a>  <a href="653_HW/HW01.tex">LaTeX</a> Due 28 August.</dd>-->
-  <dd>No assignments, yet.   There will be homework assigned on the first day of class.</dd>
+<!---------------------------------------------------------------------------------------------------->
+<dd>  <b>Assignment 0:</b>   Read the <a href="653.html">course page</a> and 
+  <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf">course
+     syllabus</a>, and send a note to Frank
+    (by email, 653 in the subject line) that you have read and understood the syllabus and course homepage and
+    pledge to abide by the course rules as detailed in those documents. 
+    Please also include in that a brief description of who you are, your mathematical background, what you hope to get out of the course,
+    and anything else that you want me to know about you.  Due 28 August before class.
+</dd>
+<!---------------------------------------------------------------------------------------------------->
+  <dd>  <b>Assignment 1:</b>  <a href="653_HW/HW01.tex">LaTeX</a> source code. Due 28 August at the start of class.</dd>
+<!---------------------------------------------------------------------------------------------------->
 </dl>
 
 
-<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <hr>
+<!---------------------------------------------------------------------------------------------------->
 </BODY>
 </HTML>
 
