--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-------------------------------------------------->
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
-     <td colspan=2><a href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
+     <td colspan=2><a target="_blank" href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
     </tr>
     <!-------------------------------------------------->
      <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
@@ -215,8 +215,8 @@
      <td><a href="https://www.math.tamu.edu/seminars/cag/"></a>Combinatorial Algebraic Geometry
      </td>
      <td width=30></td>
-     <td>Thursdays  10:00&ndash;11:00</td>
-     <td>Blocker 605A</td>
+     <td>Thursdays  11:00&ndash;12:00</td>
+     <td>Blocker 605AX</td>
    </tr>
    </tr>
       <tr> <td>&nbsp;</td>
