--- a/teaching.html
+++ b/teaching.html
@@ -117,7 +117,7 @@
     <a href="advising/Fulton80.jpg">Bill Fulton and some of his students</a>.
   </td>
  </tr>
- <!------------------------------------------------>
+ <!---------------------------------------------------------------------------->
 </table>
 <!-------------------------------------------------------------------->
   </td>
@@ -155,7 +155,7 @@
     <!-------------------------------------------------->
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
-     <td colspan=2><a href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
+     <td colspan=2><a target="_blank" href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
     </tr>
     <!-------------------------------------------------->
      <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
