--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -10,7 +10,17 @@
   <H1>Math 653: Graduate Algebra I &nbsp; &nbsp; &nbsp; Autumn 2025</h1> 
 
 <!--  https://tamu.simplesyllabus.com/doc/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I?mode=view  -->
-<!--  https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf  -->
+<!--  https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf --
+  --  -->
+<!---------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------->
+
+Scheduling for first mid-term. Last full week of September.
+Go to <a href="https://lettucemeet.com/l/7lDA6">Lettuce meet</a> and indicate which times you are available for the first
+midterm exam that week.
+Note that it will be challenging to find a 2 to 3 hour slot tsat works for everyone.
+
   
 <!---------------------------------------------------------------------------->
 <hr>
