--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -23,9 +23,13 @@ If you do use them for your own homework, please edit the header and put in your
      syllabus</a>, and send a note to Frank
     (by email, 653 in the subject line) that you have read and understood the syllabus and course homepage and
     pledge to abide by the course rules as detailed in those documents. 
-    Please also include in that a brief description of who you are, your mathematical background, what you hope to get out of the course,
+     Please also include in that a brief description of who you are, your mathematical background,
+    what you hope to get out of the course,
     and anything else that you want me to know about you.  Due 28 August before class.
 </dd>
+<!---------------------------------------------------------------------------------------------------->
+  <dd>  <b>Assignment 2:</b>  <a href="653_HW/HW02.tex">LaTeX</a> source code. Due 4 September at the start of class.</dd>
+<!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
   <dd>  <b>Assignment 1:</b>  <a href="653_HW/HW01.tex">LaTeX</a> source code. Due 28 August at the start of class.</dd>
 <!---------------------------------------------------------------------------------------------------->
