--- a/research/stories/Bestiary/Bestiary.html
+++ b/research/stories/Bestiary/Bestiary.html
@@ -116,12 +116,14 @@
 <!---------------------------------------------------------------------------->
 <table border=1>
   <tr>
-    <td colspan=3><font size=+1>Lieb Lattice&mdash;it has a <a href="https://arxiv.org/abs/2503.03632">flat band</a></font></td>
+    <td colspan=4><font size=+1>Lieb Lattice&mdash;it may have a <a href="https://arxiv.org/abs/2503.03632">flat band</a></font>
+    or not.</td>
   </tr>
   <tr>
     <td><img src="www_images/Lieb_graph.png"></a></td>
     <td><a href="Bestiary/Lieb/polytope.png"><img src="www_images/Lieb_polytope.png"></a></td>
-    <td><a href="www_images/Lieb_BV.png"><img src="www_images/Lieb_BV.png" height=140pt></a></td>
+    <td><a href="www_images/Lieb_flat.png"><img src="www_images/Lieb_flat.png" height=140pt></a></td>
+    <td><a href="www_images/Lieb_geneal.png"><img src="www_images/Lieb_general.png" height=140pt></a></td>
   </tr>
 <table>
 <!---------------------------------------------------------------------------->
