--- a/talks.html
+++ b/talks.html
@@ -160,10 +160,10 @@
   <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
     DiPrima Lecture, Department of Mathematics, Rensselaer Polytechnic Institute,
      29&ndash;30 September  2025.
-    <a href="talks/25/RPI.txt"></a>
+    <a href="talks/24/Golden.txt">Abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
