--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -18,6 +18,16 @@ If you do use them for your own homework, please edit the header and put in your
 <!---------------------------------------------------------------------------------------------------->
 <dl>
 <!---------------------------------------------------------------------------------------------------->
+<dd>  <b>Assignment 3:</b>  <a href="653_HW/HW03.tex">LaTeX</a> source code. Due 11 September at the start of class.
+  <font color=red>Note that one problem is to be handed in separately to Frank</font></dd>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+  <dd>  <b>Assignment 2:</b>  <a href="653_HW/HW02.tex">LaTeX</a> source code. Due 4 September at the start of class.</dd>
+<!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+  <dd>  <b>Assignment 1:</b>  <a href="653_HW/HW01.tex">LaTeX</a> source code. Due 28 August at the start of class.</dd>
+<!---------------------------------------------------------------------------------------------------->
 <dd>  <b>Assignment 0:</b>   Read the <a href="653.html">course page</a> and 
   <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf">course
      syllabus</a>, and send a note to Frank
@@ -27,11 +37,6 @@ If you do use them for your own homework, please edit the header and put in your
     what you hope to get out of the course,
     and anything else that you want me to know about you.  Due 28 August before class.
 </dd>
-<!---------------------------------------------------------------------------------------------------->
-  <dd>  <b>Assignment 2:</b>  <a href="653_HW/HW02.tex">LaTeX</a> source code. Due 4 September at the start of class.</dd>
-<!---------------------------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------------------------->
-  <dd>  <b>Assignment 1:</b>  <a href="653_HW/HW01.tex">LaTeX</a> source code. Due 28 August at the start of class.</dd>
 <!---------------------------------------------------------------------------------------------------->
 </dl>
 
