--- a/talks.html
+++ b/talks.html
@@ -158,11 +158,18 @@
         <a href="talks/25/CPD.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club,  Rensselaer Polytechnic Institute,
+     30 September  2025.
+      <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
     DiPrima Lecture, Department of Mathematics, Rensselaer Polytechnic Institute,
-     29&ndash;30 September  2025.
+     29 September  2025.
     <a href="talks/24/Golden.txt">Abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
