--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -12,6 +12,8 @@
 <!--  https://tamu.simplesyllabus.com/doc/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I?mode=view  -->
 <!--  https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf --
   --  -->
+Course <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf?locale=en-US">syllabus</a>.
+  
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
@@ -180,7 +182,8 @@ Homework is on a <a href="653_HW.html">separate page</a>
     </dd>
    <dd>Note that late homework is not accepted.
    </dd>
-   <dd><font color=red><b>Zeroth homework:</b> Read this page and the course syllabus, found in Canvas, and send a note to Frank
+    <dd><font color=red><b>Zeroth homework:</b> Read this page and the course
+  <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf?locale=en-US">syllabus</a>, found in Canvas, and send a note to Frank
     (by email, 653 in the subject line) that you have read and understood the syllabus and course homepage and
     pledge to abide by the course rules as detailed in those documents.
     Please also include in that a brief description of who you are, your mathematical background, what you hope to get out of the course,
