--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -18,10 +18,13 @@ If you do use them for your own homework, please edit the header and put in your
 <!---------------------------------------------------------------------------------------------------->
 <dl>
 <!---------------------------------------------------------------------------------------------------->
+<dd>  <b>Assignment 4:</b>  <a href="653_HW/HW04.tex">LaTeX</a> source code. Due 18 September at the start of class.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <dd>  <b>Assignment 3:</b>  <a href="653_HW/HW03.tex">LaTeX</a> source code. Due 11 September at the start of class.
   <font color=red>Note that one problem is to be handed in separately to Frank</font></dd>
 <!---------------------------------------------------------------------------------------------------->
-<hr>
 <!---------------------------------------------------------------------------------------------------->
   <dd>  <b>Assignment 2:</b>  <a href="653_HW/HW02.tex">LaTeX</a> source code. Due 4 September at the start of class.</dd>
 <!---------------------------------------------------------------------------------------------------->
