--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -18,10 +18,14 @@ Course <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025
 <hr>
 <!---------------------------------------------------------------------------->
 
-Scheduling for first mid-term. Last full week of September.
+<!--Scheduling for first mid-term. Last full week of September.
 Go to <a href="https://lettucemeet.com/l/7lDA6">Lettuce meet</a> and indicate which times you are available for the first
 midterm exam that week.
-Note that it will be challenging to find a 2 to 3 hour slot tsat works for everyone.
+Note that it will be challenging to find a 2 to 3 hour slot tsat works for everyone.-->
+<b><font color=brown>First Midterm:</font></b>
+This will be held in Blocker 628 on Wednesday September 24 from 6&mdash;9 PM.   Food will be provided.<br>
+
+<i>If this time is not possible for you, I will schedule an alternatice time to take a make up exam.</i>
 
   
 <!---------------------------------------------------------------------------->
