--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -18,6 +18,11 @@ If you do use them for your own homework, please edit the header and put in your
 <!---------------------------------------------------------------------------------------------------->
 <dl>
 <!---------------------------------------------------------------------------------------------------->
+<dd>  <b>Assignment 5:</b>  <a href="653_HW/HW05.tex">LaTeX</a> source code. Due at the start of your exam.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <dd>  <b>Assignment 4:</b>  <a href="653_HW/HW04.tex">LaTeX</a> source code. Due 18 September at the start of class.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
