--- a/index.html
+++ b/index.html
@@ -152,7 +152,17 @@
      </B>
    </TD>
   </TR> 
- <!----------  End Contact Information   ------------------------------------------>
+  <!---------------------      End Contact Information       ------------------------------------------>
+  <tr>
+ <!---------------------------------------------------------------------------------------------------->  
+    <td colspan=2>
+    <hr>
+   <a href="HUR/index.html">Honors and Undergraduate Research</a>
+    </td>
+
+  </tr>
+ <!---------------------------------------------------------------------------------------------------->  
+
   <tr>
    <td colspan=2>
    <!------------------------------------------------------------------------------>
@@ -406,7 +416,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Mon Jan 06 17:26:44 PST 2025 by sottile</p>  
+<p>Last modified: Thu Sep 18 18:21:38 CDT 2025 by sottile</p>  
  </body>
 </html> 
 
