--- a/talks.html
+++ b/talks.html
@@ -141,6 +141,12 @@
       Buenos Aires, Argentina, December 15 &ndash; 17 2025.
    </li>
   <!---------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li> <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Blue</a>, <!-- Intermediate</a>,-->
+     22 November 2025. <a href="talks/24/Five-color.txt"></a>
+  </li>
+  <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>, 
@@ -158,13 +164,19 @@
         <a href="talks/25/CPD.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li> <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Red</a> <!--Advanced</a>,-->
+     4 October 2025. <a href="talks/24/Five-color.txt"></a>
+  </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club,  Rensselaer Polytechnic Institute,
-     30 September  2025.
+      30 September  2025.
       <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
- <!---------------------------------------------------------------------------------------------------->
+   </li>
+  <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
@@ -191,18 +203,18 @@
   </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>, 
     <a href="https://www.math.tamu.edu/seminars/cag/"></a>MPHA Seminar,
     TAMU, 29 August 2025.
     <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
   </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
