--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -27,7 +27,8 @@ Pizza and refreshments will be provided.
     <td><FONT color=brown><b>Place:&nbsp;</b></font></td>  <td>Second Floor, Blocker Hall</td>
   </tr>
   <tr>
-    <td><FONT color=brown><b>Organizer:&nbsp;</b></font></td>  <td><A HREF="../index.html">Frank Sottile</a></td>
+    <td><FONT color=brown><b>Organizer:&nbsp;</b></font></td>
+    <td><A HREF="../index.html">Frank Sottile</a>, &nbsp; with assistance from LaKortney Hyson</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 </table>
