--- a/HUR/index.html
+++ b/HUR/index.html
@@ -20,11 +20,25 @@
 <ul>
 <!---------------------------------------------------------------------------------------------------->
   <li>
-    Undergraduate Research Symposium, Monday October 6, 2025.   Elevator lobby, Second floor of Bocker.
+    Undergraduate Research Symposium, Monday October 6, 2025.   Elevator lobby, Second floor of Blocker.
     <a href="URS_25.html">Presenters and Abstracts</a>.
   </li>
 <!---------------------------------------------------------------------------------------------------->
+</ul>
 
+
+
+<!---------------------------------------------------------------------------------------------------->
+<hr><br>
+<!---------------------------------------------------------------------------------------------------->
+<FONT color=brown><b>Past events</b></font>
+
+<ul>
+<!---------------------------------------------------------------------------------------------------->
+  <li>
+    Undergraduate Research Symposium, Thursday October 24, 2024.   Elevator lobby, Second floor of Blocker.
+  </li>
+<!---------------------------------------------------------------------------------------------------->
 </ul>
 
 
