--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -10,8 +10,9 @@
 <h2>2025 Mathematics Undergraduate Research Sympoisum</h2>
 <!---------------------------------------------------------------------------------------------------->
 
-This is a yearly event at which Texas A&amp;M undergraduate students present their REU work in an informal evening poster session.<br>
-Pizza and refreshments will be provided.
+This is a yearly event at which Texas A&amp;M undergraduate students present their REU work in an informal evening poster
+session.<br>
+Pizza and refreshments will be provided, and the symposium is co-sponsored by the Texas A&amp;M Math Club.
 <br>
 <br>
 
