--- a/conferences.html
+++ b/conferences.html
@@ -154,7 +154,15 @@
    Durham, England, 6 &ndash; 10 July 2026.
  </li>
  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="conferences/TAGS26/index.html">Texas Algebraic Geometry Symposium</a>,
+   Texas A&amp;M University,
+   17  &ndash; 19 April 2026.<br>
+   Supported by NSF grant DMS-2349244.
+ </li>
  <!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
  <li> AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
       Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
  </li>
