--- a/conferences/TAGS26/index.html
+++ b/conferences/TAGS26/index.html
@@ -40,15 +40,31 @@
       <br><br> 
 
       <b>Speakers:</b><br>
+  &nbsp;  <a href="https://web.ma.utexas.edu/users/jkileel/">Joe Kileel</a>      &nbsp;
+              University of Texas <br>
+ 
+  &nbsp;  <a href="">Justin Lacini</a>      &nbsp;
+              Texas A&amp;M University <br>
+ 
+  &nbsp;  <a href=" https://sites.google.com/site/jacksonsalvatoremorrow/">Jackson Morrow</a>      &nbsp;
+              University of North Texas <br>
+ 
+  &nbsp;  <a href="https://sites.google.com/view/rachel-webb">Rachel Webb</a>      &nbsp;
+              Cornell University <br>
+ 
+  
+  &nbsp;  <a href="https://sites.google.com/uic.edu/kftucker">Kevin Tucker</a>      &nbsp;
+              University of Illinois at Chicago <br>
+ 
   &nbsp;  <a href=""></a>      &nbsp;
               <br>
  
+  
  
    </td>
   </tr>
 </tbody>
 </table>
-
 
 <!----------------------------------------------------------------------------------------------------->
 <hr>
