--- a/conferences/TAGS26/local.html
+++ b/conferences/TAGS26/local.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-  <title>Texas Algebraic Geometry Symposium 2025</title>
+  <title>Texas Algebraic Geometry Symposium 2026</title>
 </head><body style="background-color:#baccf0;">
 <a name="TOP"></a>
 
 <!--------------------------------------------------------------------------------------------------->
  <a href="index.html"><h2>Texas Algebraic Geometry Symposium</h2></a><br>
- Texas A&amp;M University 28  &ndash; 30 March  2025.<br>
- <!--<font color=red>Under Construction!</font><br>--->
+ Texas A&amp;M University 17  &ndash; 19 April  2026.<br>
+ <!-----><font color=red>Under Construction!</font><br>
  
 <h3><font color=Maroon>Local Information</font></h3>
 
@@ -105,8 +105,8 @@
   <tr valign=top>
     <td width=120pt><h3><font color=Maroon>Funding</font> </h3></td>
     <td valign=top colspan=3><br>
-      TAGS 2024 is supported by an NSF grant DMS-2349244: Texas Algebraic Geometry Symposium 2024&ndash;2027, and
-      the Department of Mathematics and the College of Arts and Sciences at Texas A&amp;M University.<br><br>
+      TAGS 2026 is supported by an NSF grant DMS-2349244: Texas Algebraic Geometry Symposium 2024&ndash;2027, and
+      the Department of Mathematics <!--and the College of Arts and Sciences--> at Texas A&amp;M University.<br><br>
 
       Limited funding will be available to cover lodging in College Station during the conference.
       Priority will be given to students and postdocs.
@@ -128,14 +128,14 @@
 	<td>&nbsp;</td>
         <td><table>
          <table>
-           <tr><td bgcolor=#FFFFFF rowspan=2>
+           <!--<tr><td bgcolor=#FFFFFF rowspan=2>
 	     <table>     
               <tr><td bgcolor="880000"><img height=100 src="TAM-Logo-white.png"></td>
               <td bgcolor=#FFFFFF>&nbsp;</td>
               <td bgcolor=#FFFFFF colspan=2><font size=-1>TEXAS A&M UNIVERSITY</font><br>
                <font size=+2>College of Arts&nbsp;<br>&amp; Sciences</font>
             </table></td>
-      </tr><tr><td></td></tr>
+      </tr>--><tr><td></td></tr>
     </td>
   </tr>
 
