--- a/conferences/index.html
+++ b/conferences/index.html
@@ -44,6 +44,14 @@
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="TAGS26/index.html">Texas Algebraic Geometry Symposium</a>,
+   Texas A&amp;M University,
+   17  &ndash; 19 April 2026.<br>
+   Supported by NSF grant DMS-2349244.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
 </ul>
 <!------------------------------------------------------------------------>
 <hr>
